texty v detailu produktu

--- a/src/AppBundle/Resources/views/ShopCatalog/detail.html.twig
+++ b/src/AppBundle/Resources/views/ShopCatalog/detail.html.twig
@@ -126,7 +126,7 @@
 
             {% if product.description %}
             <div class="col-md-12">
-                <div class="description-title">Popis</div>
+                <h3 class="description-title">Popis</h3>
                 {{ product.description | raw }}
             </div>
             {% endif %}
