ladeni pres spustenim

--- a/src/AppBundle/Resources/public/less/general.less
+++ b/src/AppBundle/Resources/public/less/general.less
@@ -57,6 +57,10 @@ body {
   font-size: 20px;
 }
 
+.hide {
+  display: none;
+}
+
 a {
   color: @link-color;
 }
@@ -148,5 +152,11 @@ footer {
     top: -3px;
     left: -5px;
     *overflow: hidden;
+  }
+}
+
+#contact-form {
+  .btn {
+    cursor: pointer;
   }
 }
