--- a/src/AppBundle/Resources/public/less/product_detail.less
+++ b/src/AppBundle/Resources/public/less/product_detail.less
@@ -6,6 +6,10 @@
     margin-bottom: 30px;
   }
 
+  h6 {
+    margin-top: -20px;
+  }
+
   table#product-detail-info {
     margin-top: 20px;
   }
@@ -55,6 +59,18 @@
         top: 38px;
         color: red;
       }
+    }
+  }
+
+  .description-title {
+    margin-top: 30px;
+  }
+
+  .image-thumbnails {
+    margin-top: 40px;
+
+    .thumbnail {
+      padding-bottom: 20px;
     }
   }
 }
