--- a/src/AppBundle/Resources/views/Email/base.html.twig
+++ b/src/AppBundle/Resources/views/Email/base.html.twig
@@ -24,6 +24,14 @@
 
                                     {% include template with { data: data } %}
 
+                                    <br />
+                                    <p style="padding: 10px;">
+                                        <strong>GOWOOD.CZ</strong><br />
+                                        Petr Kožený<br />
+                                        T: +420 728 870 246<br />
+                                        E: info@gowood.cz<br />
+                                    </p>
+
                                 </td>
                             </tr>
                             </tbody>
