--- a/src/AppBundle/Resources/views/Page/about_buying.html.twig
+++ b/src/AppBundle/Resources/views/Page/about_buying.html.twig
@@ -163,7 +163,7 @@
 
             <p>
                 Jako spotřebitel nemáte ze zákona právo vrátit zakoupené zboží, které bylo upraveno na Vaše přání (odstoupit od kupní smlouvy).
-                My jsme ale zavedli lhůtu 7 dnů na vrázení, protože chceme jenom spokojené zákazníky.
+                My jsme ale zavedli lhůtu 7 dnů na vrácení, protože chceme jenom spokojené zákazníky.
                 Pokud zboží kupujete jako firma nebo živnostník (tzn. na daňovém dokladu je vaše IČ), právo na odstoupení vám nevzniká.
             </p>
 
