--- a/src/AppBundle/Resources/views/Page/about_us.html.twig
+++ b/src/AppBundle/Resources/views/Page/about_us.html.twig
@@ -5,13 +5,17 @@
      <h1>O nás</h1>
 
 
-    <div class="article row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <p style="text-align: center; font-size: 1.1em;">Vyrábíme originální dřevené dekorace a doplňky, u kterých si sami můžete říct, jak mají vypadat. Můžete udělat radost sobě nebo dárkem někomu, kdo si to zaslouží :)</p>
-            <p style="text-align: center;">Nejsme plátci DPH a uvedené ceny jsou konečné.</p>
+    <div class="article about-us row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+            <p>Máme rádi dřevo, dobré víno a pivo, kvalitní muziku a nepohrdneme ani pěkným filmem :-)</p>
+            <p>Jsme tři bratři, dva ajťáci a jeden truhlář, a na začátku roku 2018 jsme se rozhodli  spojit naše dovednosti a zkušenosti dohromady - začít vyrábět dřevěné dekorace pomocí laseru a CNC stroje. Stále se učíme, výroba probíhá v garáži, postupně chceme dále rozšiřovat sortiment, ale snad už nyní si z našich produktů vyberete a budete spokojeni, ať už si objednáte něco pro sebe nebo pro někoho jiného jako dárek.</p>
+            <p>Tento e-shop jsme spustili po několika měsících příprav, v neděli 11.11.2018 v 11:11 hodin. Věříme, že nám jedenáctky přinesou štěstí a že se třeba časem této činnosti budeme moci věnovat naplno, nejen po práci a o víkendech.</p>
+            <p>Naše výrobky se vyznačují především tím, že si je do jisté míry navrhujete Vy sami. Ať už to budou hodiny s logem firmy nebo s nějakým hezkým obrázkem a věnováním, nebo fotorámeček jako svatební dar, dárek k Vánocům nebo dárek k narození miminka, budete mít v ruce originál, který prostě musí udělat radost!</p>
+            <p>Vaše spokojenost je pro nás velmi důležitá, a proto věnujeme důkladnou péči nejen návrhu a výrobě, ale také finálním úpravám. Doufáme tedy, že se Vám výsledek bude vždy líbit a budete se do našeho e-shopu rádi vracet.</p>
+            <p><strong>Petr & Pavel & Zdenda Kožených</strong></p>
         </div>
-        <div class="col-md-2"></div>
+        <div class="col-md-1"></div>
     </div>
 
     </div>
