--- a/src/AppBundle/Resources/views/ShopCart/boxes/step1-items.html.twig
+++ b/src/AppBundle/Resources/views/ShopCart/boxes/step1-items.html.twig
@@ -3,7 +3,7 @@
         <div class="checkout-item" data-id="{{ item.id }}">
             <div class="image">
                 <a href="{{ path('shop_catalog_detail', { slug: item.product.slug }) }}">
-                    <img width="100%" src="{{ path('image_cache', { id: item.product.images[0].id, setting: '200x150x1'}) }}" />
+                    <img width="100%" src="{{ item.product.images[0].path | imagine_filter('cart_thumb') }}" />
                 </a>
             </div>
             {#<div class="model">{{ item.product.model }}</div>#}
