osetreni nevyplnene zasilkovny, uprava stranky vse o nakupu

--- a/src/AppBundle/Resources/views/Page/about_buying.html.twig
+++ b/src/AppBundle/Resources/views/Page/about_buying.html.twig
@@ -21,7 +21,7 @@
                         <li><span class="price">zdarma</span> pro objednávky od 2&nbsp;000 Kč</li>
                     </ul>
                 </li>
-                <li><strong>Možnost platby na dobírku</strong> - ano, v hotovosti i kartou, <span class="price">zdarma{#29 Kč#}</span></li>
+                <li><strong>Možnost platby na dobírku</strong> - ano, v hotovosti i kartou, cena <span class="price">29 Kč</span></li>
                 <li><strong>Rychlost dodání</strong> - do 2 pracovních dnů</li>
                 <li><strong>Notifikace</strong> - ano, e-mailem nebo SMS</li>
                 <li><strong>Sledování zásilky</strong> -ano</li>
@@ -38,7 +38,7 @@
                     </ul>
                 </li>
 
-                <li><strong>Možnost platby na dobírku</strong> - ano, pouze v hotovosti, <span class="price">zdarma{#29 Kč#}</span></li>
+                <li><strong>Možnost platby na dobírku</strong> - ano, pouze v hotovosti, cena <span class="price">29 Kč</span></li>
                 <li><strong>Rychlost dodání na pobočku</strong> - do 2 pracovních dnů</li>
                 <li><strong>Doba uložení</strong> - 7 dní (možno prodloužit až na 21 dní)</li>
                 <li><strong>Notifikace</strong> - ano, e-mailem nebo SMS</li>
@@ -62,7 +62,7 @@
                         <li><span class="price">zdarma</span> pro objednávky od 2 000 Kč</li>
                     </ul>
                 </li>
-                <li><strong>Možnost platby na dobírku</strong> - ano, pouze v hotovosti, <span class="price">zdarma{#29 Kč#}</span></li>
+                <li><strong>Možnost platby na dobírku</strong> - ano, pouze v hotovosti, cena <span class="price">29 Kč</span></li>
                 <li><strong>Rychlost dodání</strong> - do 2 pracovních dnů</li>
                 <li><strong>Opakované doručení</strong> - ano, na požádání</li>
                 <li><strong>Doba uložení na poště</strong> - 7 dní (možno prodloužit až na 15 dní)</li>
@@ -91,9 +91,9 @@
 
             <h3>Platba při převzetí</h3>
             <ul>
-                <li>Česká pošta - pouze v hotovosti - <span class="price">zdarma{#29 Kč#}</span>.</li>
-                <li>GLS - v hotovosti či platební kartou - <span class="price">zdarma{#29 Kč#}</span>.</li>
-                <li>Zásilkovna - pouze v hotovosti - <span class="price">zdarma{#29 Kč#}</span>.</li>
+                <li>Česká pošta - pouze v hotovosti - polatek <span class="price">29 Kč</span>.</li>
+                <li>GLS - v hotovosti či platební kartou - polatek <span class="price">29 Kč</span>.</li>
+                <li>Zásilkovna - pouze v hotovosti - polatek  <span class="price">29 Kč</span>.</li>
             </ul>
 
             <p>Naším partnerem pro platební transakce je <a href="https://www.gopay.cz/">GoPay</a></p>
