obchodni podminky pred dokoncenim objednavky, oprava zasilkovna v kosiku

--- a/src/AppBundle/Resources/public/less/cart.less
+++ b/src/AppBundle/Resources/public/less/cart.less
@@ -1,8 +1,11 @@
 .cart, .customer, .summary {
 
-
-
-
+  .terms {
+    text-align: right;
+    a {
+      color: #f60;
+    }
+  }
 
   h3 {
     text-align: center;
