--- a/src/AppBundle/Resources/views/ShopCart/summary.html.twig
+++ b/src/AppBundle/Resources/views/ShopCart/summary.html.twig
@@ -122,6 +122,10 @@
                     Dokončit objednávku {{ cm.cart.payment.isGopay ? ' a zaplatit' }}
                     <i class="fas fa-chevron-right"></i>
                 </button>
+                <br /> <br />
+                <p class="terms">
+                    Odesláním objednávky souhlasíte s našimi <a href="/obchodni-podminky" target="_blank">obchodními podmínkami</a> a se <a href="/ochrana-osobnich-udaju" target="_blank">zpracováním osobních údajů</a>.
+                </p>
             </div>
 
         </form>
