--- a/src/AppBundle/Resources/public/less/gowood.less
+++ b/src/AppBundle/Resources/public/less/gowood.less
@@ -317,8 +317,9 @@ section#content {
 
     h2 {
       text-align: center;
-      font-size: 21px;
-      margin: 10px 0;
+      font-size: 25px;
+      margin-top: 10px;
+      margin-bottom: 30px;
 
       a {
         color: #383737;
