--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -20,7 +20,7 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
 
-        <div align="center" class="alert alert-success">V neděli 11. 11. 2018 v 11:11 jsme spustili nový eshop. Doufáme, že se Vám bude líbit. Platba online již brzy :)</div>
+        <div align="center" class="alert alert-success">V neděli 11. 11. 2018 v 11:11 jsme spustili nový eshop. Doufáme, že se Vám bude líbit. Platba online už v provozu.</div>
         <header>
             <div class="container">
                 <div class="row">
